updates .vscode .gitignore lines

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
-.vscode
+### VisualStudioCode ###
+.vscode/*      # Maybe .vscode/**/* instead - see comments
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# DS_Store
 .DS_Store
